first successful paybills test case

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,16 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">67,129</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">11,451</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="7">zeroBank.testcases.LoginPageTest</td><td><a href="#m0">checkBoxVerify</a></td><td rowspan="1">1539908448384</td><td rowspan="1">197</td></tr><tr class="passedeven"><td><a href="#m1">errorMessageOnInvalid</a></td><td rowspan="1">1539908456629</td><td rowspan="1">871</td></tr><tr class="passedeven"><td><a href="#m2">hoverMessageIsDisplayed</a></td><td rowspan="1">1539908465439</td><td rowspan="1">216</td></tr><tr class="passedeven"><td><a href="#m3">loginVerify</a></td><td rowspan="1">1539908474149</td><td rowspan="1">1250</td></tr><tr class="passedeven"><td><a href="#m4">verifyForgottenPasswordLink</a></td><td rowspan="1">1539908484893</td><td rowspan="1">465</td></tr><tr class="passedeven"><td><a href="#m5">verifyLoginPageZeroLogo</a></td><td rowspan="1">1539908493409</td><td rowspan="1">58</td></tr><tr class="passedeven"><td><a href="#m6">verifyLoginPagetitle</a></td><td rowspan="1">1539908507244</td><td rowspan="1">20</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">zeroBank.testcases.PayBillsTest</td><td><a href="#m0">verifySuccessfulPayment</a></td><td rowspan="1">1539918414980</td><td rowspan="1">1227</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">zeroBank.testcases.LoginPageTest#checkBoxVerify</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">zeroBank.testcases.LoginPageTest#errorMessageOnInvalid</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">zeroBank.testcases.LoginPageTest#hoverMessageIsDisplayed</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">zeroBank.testcases.LoginPageTest#loginVerify</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">zeroBank.testcases.LoginPageTest#verifyForgottenPasswordLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">zeroBank.testcases.LoginPageTest#verifyLoginPageZeroLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">zeroBank.testcases.LoginPageTest#verifyLoginPagetitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">zeroBank.testcases.PayBillsTest#verifySuccessfulPayment</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
