--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\terence.lo\AppData\Local\Temp\testng-eclipse-951323929\testng-customsuite.xml</span>
+                    <span>C:\Users\terence.lo\AppData\Local\Temp\testng-eclipse--1616989791\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,37 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="zeroBank.testcases.LoginPageTest" class="method navigator-link" hash-for-method="checkBoxVerify">checkBoxVerify</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="zeroBank.testcases.LoginPageTest" class="method navigator-link" hash-for-method="errorMessageOnInvalid">errorMessageOnInvalid</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="zeroBank.testcases.LoginPageTest" class="method navigator-link" hash-for-method="hoverMessageIsDisplayed">hoverMessageIsDisplayed</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="zeroBank.testcases.LoginPageTest" class="method navigator-link" hash-for-method="loginVerify">loginVerify</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="zeroBank.testcases.LoginPageTest" class="method navigator-link" hash-for-method="verifyForgottenPasswordLink">verifyForgottenPasswordLink</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="zeroBank.testcases.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginPageZeroLogo">verifyLoginPageZeroLogo</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="zeroBank.testcases.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginPagetitle">verifyLoginPagetitle</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="zeroBank.testcases.PayBillsTest" class="method navigator-link" hash-for-method="verifySuccessfulPayment">verifySuccessfulPayment</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -150,56 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">zeroBank.testcases.LoginPageTest</span>
+              <span class="class-name">zeroBank.testcases.PayBillsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="checkBoxVerify">
-                  </a> <!-- checkBoxVerify -->
-                  <span class="method-name">checkBoxVerify</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="errorMessageOnInvalid">
-                  </a> <!-- errorMessageOnInvalid -->
-                  <span class="method-name">errorMessageOnInvalid</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="hoverMessageIsDisplayed">
-                  </a> <!-- hoverMessageIsDisplayed -->
-                  <span class="method-name">hoverMessageIsDisplayed</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginVerify">
-                  </a> <!-- loginVerify -->
-                  <span class="method-name">loginVerify</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyForgottenPasswordLink">
-                  </a> <!-- verifyForgottenPasswordLink -->
-                  <span class="method-name">verifyForgottenPasswordLink</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLoginPageZeroLogo">
-                  </a> <!-- verifyLoginPageZeroLogo -->
-                  <span class="method-name">verifyLoginPageZeroLogo</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLoginPagetitle">
-                  </a> <!-- verifyLoginPagetitle -->
-                  <span class="method-name">verifyLoginPagetitle</span>
+                  <a name="verifySuccessfulPayment">
+                  </a> <!-- verifySuccessfulPayment -->
+                  <span class="method-name">verifySuccessfulPayment</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -207,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\terence.lo\AppData\Local\Temp\testng-eclipse-951323929\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\terence.lo\AppData\Local\Temp\testng-eclipse--1616989791\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -216,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;zeroBank.testcases.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;zeroBank.testcases.PayBillsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -256,40 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginVerify')
-data.setCell(0, 2, 'zeroBank.testcases.LoginPageTest')
-data.setCell(0, 3, 1250);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'errorMessageOnInvalid')
-data.setCell(1, 2, 'zeroBank.testcases.LoginPageTest')
-data.setCell(1, 3, 871);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyForgottenPasswordLink')
-data.setCell(2, 2, 'zeroBank.testcases.LoginPageTest')
-data.setCell(2, 3, 465);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'hoverMessageIsDisplayed')
-data.setCell(3, 2, 'zeroBank.testcases.LoginPageTest')
-data.setCell(3, 3, 216);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'checkBoxVerify')
-data.setCell(4, 2, 'zeroBank.testcases.LoginPageTest')
-data.setCell(4, 3, 197);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyLoginPageZeroLogo')
-data.setCell(5, 2, 'zeroBank.testcases.LoginPageTest')
-data.setCell(5, 3, 58);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyLoginPagetitle')
-data.setCell(6, 2, 'zeroBank.testcases.LoginPageTest')
-data.setCell(6, 3, 20);
+data.setCell(0, 1, 'verifySuccessfulPayment')
+data.setCell(0, 2, 'zeroBank.testcases.PayBillsTest')
+data.setCell(0, 3, 1227);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -315,90 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">zeroBank.testcases.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">zeroBank.testcases.PayBillsTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">checkBoxVerify</span>
-                <span class="method-start">7494 ms</span>
+                <span class="method-name">verifySuccessfulPayment</span>
+                <span class="method-start">9485 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">7693 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">8429 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">errorMessageOnInvalid</span>
-                <span class="method-start">15739 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">16612 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">17338 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">hoverMessageIsDisplayed</span>
-                <span class="method-start">24549 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">24767 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">25524 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginVerify</span>
-                <span class="method-start">33259 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">34510 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">35226 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyForgottenPasswordLink</span>
-                <span class="method-start">44003 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">44469 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">45191 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyLoginPageZeroLogo</span>
-                <span class="method-start">52519 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">52579 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">53267 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyLoginPagetitle</span>
-                <span class="method-start">66354 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">66375 ms</span>
+                <span class="method-start">10714 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
