--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,46 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:20:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.checkBoxVerify()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">checkBoxVerify</td> 
-  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:20:56</td>   <td>8245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.errorMessageOnInvalid()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">errorMessageOnInvalid</td> 
-  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:05</td>   <td>17055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.hoverMessageIsDisplayed()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">hoverMessageIsDisplayed</td> 
-  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:14</td>   <td>25765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginVerify()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">loginVerify</td> 
-  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:20:40</td>   <td>-7493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:20:49</td>   <td>935</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:20:58</td>   <td>9844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:06</td>   <td>18030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:16</td>   <td>27733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:26</td>   <td>37697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:34</td>   <td>45773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:20:48</td>   <td>199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:20:57</td>   <td>9119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:05</td>   <td>17273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:15</td>   <td>27017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:25</td>   <td>36975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:33</td>   <td>45085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:47</td>   <td>58882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:24</td>   <td>36509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyForgottenPasswordLink()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">verifyForgottenPasswordLink</td> 
-  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:33</td>   <td>45025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageZeroLogo()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">verifyLoginPageZeroLogo</td> 
-  <td>main@1229202732</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 20:21:47</td>   <td>58860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPagetitle()[pri:0, instance:zeroBank.testcases.LoginPageTest@45ca843]">verifyLoginPagetitle</td> 
-  <td>main@1229202732</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/18 23:06:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@568ff82]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1402433372</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/18 23:06:56</td>   <td>10713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@568ff82]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1402433372</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/18 23:06:54</td>   <td>9484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.verifySuccessfulPayment()[pri:0, instance:zeroBank.testcases.PayBillsTest@568ff82]">verifySuccessfulPayment</td> 
+  <td>main@1402433372</td>   <td></td> </tr>
 </table>
