--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,64 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9175ef">  <td>18/10/18 23:06:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@568ff82]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1402433372</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 23:06:56</td>   <td>10713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@568ff82]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1402433372</td>   <td></td> </tr>
-<tr bgcolor="9175ef">  <td>18/10/18 23:06:54</td>   <td>9484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.verifySuccessfulPayment()[pri:0, instance:zeroBank.testcases.PayBillsTest@568ff82]">verifySuccessfulPayment</td> 
-  <td>main@1402433372</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.emptyFCPurchase()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">emptyFCPurchase</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:34</td>   <td>9700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.emptyFieldsAddPayee()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">emptyFieldsAddPayee</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:48</td>   <td>22911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.negativeFCPurchase()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">negativeFCPurchase</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:01</td>   <td>35847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.payEmptyAmount()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">payEmptyAmount</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:20</td>   <td>55408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.payNegativeAmount()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">payNegativeAmount</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:32</td>   <td>67606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.payZeroAmount()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">payZeroAmount</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:17</td>   <td>-8002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:26</td>   <td>1464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:36</td>   <td>11244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:49</td>   <td>24532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:03</td>   <td>37797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:23</td>   <td>57759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:34</td>   <td>69570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:45</td>   <td>79926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:55</td>   <td>90038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:53:05</td>   <td>100522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayBillsTest.setUp()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:43</td>   <td>78013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.successfulAddPayee()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">successfulAddPayee</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:53</td>   <td>88193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.successfulFCPurchase()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">successfulFCPurchase</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:53:03</td>   <td>98544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.successfulPayment()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">successfulPayment</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:26</td>   <td>715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:35</td>   <td>10493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:51:49</td>   <td>23814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:02</td>   <td>37051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:22</td>   <td>56756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:34</td>   <td>68841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:44</td>   <td>79207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:52:54</td>   <td>89309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:53:05</td>   <td>99786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:53:15</td>   <td>110409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayBillsTest.tearDown()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1932274274</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>18/10/19 08:53:14</td>   <td>109366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayBillsTest.zeroFCPurchase()[pri:0, instance:zeroBank.testcases.PayBillsTest@574b560f]">zeroFCPurchase</td> 
+  <td>main@1932274274</td>   <td></td> </tr>
 </table>
